@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Andriy Grytsenko <andrej@rep.kiev.ua>
+ * Copyright (C) 2014-2016 Andriy Grytsenko <andrej@rep.kiev.ua>
  *
  * This file is a part of LXPanel project.
  *
@@ -30,6 +30,8 @@
 #include "gtk-compat.h"
 
 #include <keybinder.h>
+
+static GHashTable *all_bindings = NULL;
 
 /* generated by glib-genmarshal for BOOL:STRING */
 static
@@ -381,7 +383,13 @@ gboolean lxpanel_apply_hotkey(char **hkptr, const char *keystring,
     g_return_val_if_fail(hkptr != NULL, FALSE);
     g_return_val_if_fail(handler != NULL, FALSE);
 
-    if (keystring != NULL && !keybinder_bind(keystring, handler, user_data))
+    if (G_UNLIKELY(all_bindings == NULL))
+        all_bindings = g_hash_table_new_full(g_str_hash, g_str_equal, g_free, NULL);
+
+    if (keystring != NULL &&
+        /* check if it was already grabbed in some other place */
+        (g_hash_table_lookup(all_bindings, keystring) != NULL ||
+         !keybinder_bind(keystring, handler, user_data)))
     {
         if (show_error)
         {
@@ -398,9 +406,14 @@ gboolean lxpanel_apply_hotkey(char **hkptr, const char *keystring,
         return FALSE;
     }
     if (*hkptr != NULL)
+    {
         keybinder_unbind(*hkptr, handler);
-    g_free(*hkptr);
+        if (!g_hash_table_remove(all_bindings, *hkptr))
+            g_warning("%s: hotkey %s not found in hast table", __FUNCTION__, *hkptr);
+    }
     *hkptr = g_strdup(keystring);
+    if (*hkptr)
+        g_hash_table_insert(all_bindings, *hkptr, *hkptr);
     return TRUE;
 }
 
